--- a/styles/doc.css
+++ b/styles/doc.css
@@ -19,8 +19,9 @@ header {
     gap: 2em;
   }
 
-.cropped-ofp {
-width: 100px; 
+src="https://example.com/doc2.jpg"> 
+\.cropped-ofp {
+width: 80px; 
 height: 75px; 
 object-fit: cover;
 object-position: 25% 25%; 
