--- a/styles/doc.css
+++ b/styles/doc.css
@@ -17,8 +17,8 @@ header {
     grid-template-columns: repeat(3, 1fr);
     justify-items: center;
     gap: 2em;
-    width: 15px;
-    height: 15px;
+    /* width: 100%;
+    height: 150px; */
   }
 
 
